--- a/sender/src/main/resources/application.yml
+++ b/sender/src/main/resources/application.yml
@@ -7,26 +7,10 @@ spring:
   application:
     name: mail-sender
 
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/sender-db
-    username: admin
-    password: 123456
-    initialize: true
 
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-      format_sql: true
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-  sql:
-    init:
-      mode: always
-      continue-on-error: true
-      platform: postgresql
+  data:
+    mongodb:
+      uri: mongodb://admin:123456@localhost/email-db?authSource=admin
 
   mail:
     host: sandbox.smtp.mailtrap.io
