--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3.9'
 services:
 
-  db:
+  mongo-db:
     image: mongo
-    container_name: mail_rabbit
+    container_name: sender-db
+    networks:
+      - mail-sender
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_DATABASE=email
@@ -11,28 +13,90 @@ services:
     ports:
       - 27017:27017
       - 28017:28017
+    volumes:
+      - emailapi:/var/lib/mongodb
       
-  postgres:
-    image: postgres:alpine
-    container_name: db
+  email-db:
+    image: postgres
+    container_name: publisher-db
+    networks:
+      - mail-sender
     environment:
       - POSTGRES_DB=email-db
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=123456
     ports:
       - 5432:5432
+    volumes:
+      - emailapi:/var/lib/postgres
  
   
 
-  rabbit:
+  rabbitmq:
     image: rabbitmq:3-management
-    container_name: rabbit
+    container_name: rabbitmq
+    networks:
+      - mail-sender
     ports:
       - 5672:5672
       - 25676:25676
       - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+
+
+  email-sender:
+    build: './sender'
+    container_name: sender-api
+    depends_on:
+      - rabbitmq
+      - mongo-db
+    networks:
+      - mail-sender
+    environment:
+      - PORT=8081
+      - MONGO_DB_URL=mongodb://admin:123456@mongo-db/email-db?authSource=admin
+      - RABBIT_MQ_HOST=rabbitmq
+      - RABBIT_MQ_PORT=5672
+      - RABBIT_MQ_USER=guest
+      - RABBIT_MQ_PASSWORD=guest
+      # - RABBIT_MQ_URL=amqp://guest:guest@rabbitmq:5672/
+    ports:
+      - 8081:8081
+
+  publisher:
+    build: './mail_publisher'
+    container_name: publisher
+    depends_on:
+      - email-db
+      - rabbitmq
+    networks:
+      - mail-sender
+    environment:
+      - PORT=8080
+      - DB_HOST=email-db
+      - DB_NAME=email-db
+      - DB_USER=admin
+      - DB_PASSWORD=123456
+      - DB_PORT=5432
+      
+      - RABBIT_MQ_HOST=rabbitmq
+      - RABBIT_MQ_PORT=5672
+      - RABBIT_MQ_USER=guest
+      - RABBIT_MQ_PASSWORD=guest
+    ports:
+      - 8080:8080
+
 networks:
-  default:
-    name: local
+  mail-sender:
+    driver: bridge
+
+volumes:
+  emailapi:
+      
+
+
+
     
     
