--- a/mail_publisher/src/main/resources/application.yml
+++ b/mail_publisher/src/main/resources/application.yml
@@ -1,15 +1,16 @@
 server:
-  port: 8081
+  port: ${PORT:8080}
 
 
 spring:
   
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/email-db
-    username: admin
-    password: 123456
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:email-db}
+    username: ${DB_USER:admin}
+    password: ${DB_PASSWORD:123456}
     initialize: true
+    maxActice: 3
 
 
   
@@ -39,10 +40,10 @@ spring:
           starttls: true
   
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+    host: ${RABBIT_MQ_HOST:localhost}
+    port: ${RABBIT_MQ_PORT:5672}
+    username: ${RABBIT_MQ_USER:guest}
+    password: ${RABBIT_MQ_PASSWORD:guest}
 
 app-config:
 
